--- a/TTCNTT/TTCNTT/Views/Shared/_Layout.cshtml
+++ b/TTCNTT/TTCNTT/Views/Shared/_Layout.cshtml
@@ -97,7 +97,7 @@
                             } }
                         @{ if (@Session["quyen"] != null && @Session["Quyen"].ToString() == "admin")
                             {
-                                <li class="dropdown">
+                                @*<li class="dropdown">
                                     <a href="#" class="nav-link dropdown-toggle arrow" data-toggle="dropdown">Xem thông tin</a>
                                     <ul class="dropdown-menu">
                                         <li><a href="cart.html">Xem thông báo</a></li>
@@ -116,7 +116,7 @@
                                         <li><a href="my-account.html">Quản lý đánh giá kết quả học tập cuối kỳ</a></li>
                                     </ul>
                                 </li>
-                                <li class="nav-item"><a class="nav-link" href="service.html">Giải đáp thắc mắc</a></li>
+                                <li class="nav-item"><a class="nav-link" href="service.html">Giải đáp thắc mắc</a></li>*@
                                 <li class="dropdown">
                                     <a href="#" class="nav-link dropdown-toggle arrow" data-toggle="dropdown">Thông báo</a>
                                     <ul class="dropdown-menu">
@@ -134,7 +134,7 @@
                                     </ul>
                                 </li>
                                 <li class="nav-item"><a class="nav-link" href="service.html">Giải đáp thắc mắc</a></li>
-                                <li class="nav-item"><a class="nav-link" href="/lam">Duyệt đơn xin nghỉ học</a></li>
+                                <li class="nav-item"><a class="nav-link" href="/lam">Duyệt đơn nghỉ học</a></li>
                             } }
                     </ul>
                 </div>
