--- a/TTCNTT/TTCNTT/Views/Shared/_Layout.cshtml
+++ b/TTCNTT/TTCNTT/Views/Shared/_Layout.cshtml
@@ -110,7 +110,7 @@
                                 <li class="dropdown">
                                     <a href="#" class="nav-link dropdown-toggle arrow" data-toggle="dropdown">Quản lý học sinh</a>
                                     <ul class="dropdown-menu">
-                                        <li><a href="lam/diemdanh">Điểm danh học sinh</a></li>
+                                        <li><a href="/lam/diemdanh">Điểm danh học sinh</a></li>
                                         <li><a href="/H_GiaoVien">Nhập và sửa điểm học sinh</a></li>
                                         <li><a href="my-account.html">Đánh giá học sinh hàng ngày</a></li>
                                         <li><a href="my-account.html">Quản lý đánh giá kết quả học tập cuối kỳ</a></li>
@@ -152,7 +152,7 @@
                             }
                             else
                             {
-                                
+                                <p>Xin chào,</p> @Session["tenhienthi"]
                                 <a href="/Home/Logout">
                                     <i class='fas fa-user-alt' style='font-size:24px'></i>
                                 </a>
